--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
+
+:root {
+	--primary-color: #d8697b;
+	--border-radius: 5px;
+}
+
 html {
 	box-sizing: border-box; /* prevent padding to add extra width and height to the page */
 }
@@ -5,4 +12,177 @@ html {
 body {
 	margin: 0;
 	min-height: 100vh;
+	background-color: var(--primary-color);
+	font-family: 'Libre Franklin', sans-serif;
+	background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23ffffff' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+}
+
+h1 {
+	color: white;
+	padding: 20px;
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: var(--border-radius);
+	cursor: pointer;
+	text-transform: uppercase;
+	text-align: center;
+	width: 280px;
+	margin: 20px auto 10px;
+	user-select: none;
+}
+h1:hover {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Bookmarks */
+.container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin-top: 40px;
+}
+
+.item {
+	background: rgba(0, 0, 0, 0.5);
+	color: white;
+	border-radius: var(--border-radius);
+	padding: 20px;
+	margin: 10px;
+}
+.item:hover {
+	background: rgba(0, 0, 0, 0.6);
+}
+
+a {
+	font-size: 20px;
+	/* font-weight: bold; */
+	text-transform: uppercase;
+}
+a:link,
+a:visited {
+	color: white;
+	text-decoration: none;
+}
+a:hover,
+a:active {
+	text-decoration: underline;
+}
+
+.fa-xmark {
+	float: right;
+	cursor: pointer;
+	z-index: 2;
+}
+
+.name {
+	margin-top: 20px;
+	margin-right: 20px;
+}
+
+.name img {
+	height: 25px;
+	width: 25px;
+	vertical-align: sub;
+	margin-right: 5px;
+}
+
+/* Modal */
+.modal-container {
+	background: rgba(0, 0, 0, 0.6);
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+
+.show-modal {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal {
+	background: white;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+	max-width: 95%;
+	width: 500px;
+	animation: modalopen 1s;
+}
+
+@keyframes modalopen {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.close-icon {
+	float: right;
+	color: white;
+	font-size: 24px;
+	position: relative;
+	top: 13px;
+	right: 13px;
+	cursor: pointer;
+}
+
+.modal-header {
+	background: var(--primary-color);
+	color: white;
+	padding: 15px;
+}
+
+h3 {
+	margin: 0;
+}
+
+.modal-content {
+	padding: 20px;
+	background: whitesmoke;
+}
+
+/* Form */
+.form-group {
+	height: 55px;
+}
+
+.form-input {
+	width: 97%;
+	padding: 5px;
+	border: 2px solid var(--primary-color);
+	border-radius: var(--border-radius);
+	display: block;
+	outline: none;
+}
+
+.form-label {
+	color: var(--primary-color);
+	display: block;
+}
+
+button {
+	cursor: pointer;
+	color: white;
+	background: var(--primary-color);
+	height: 30px;
+	width: 100px;
+	border: none;
+	border-radius: var(--border-radius);
+	margin-top: 10px;
+}
+button:hover {
+	filter: brightness(110%);
+}
+button:focus {
+	outline: none;
+}
+
+/* Media Query: Large Smartphone (Vertical) */
+@media screen and (max-width: 600px) {
+	.container {
+		flex-direction: column;
+	}
 }
